--- a/StoreSearchTutorial4/StoreSearchTutorial4/Base.lproj/Main.storyboard
+++ b/StoreSearchTutorial4/StoreSearchTutorial4/Base.lproj/Main.storyboard
@@ -20,11 +20,35 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0hn-qd-elK">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                            <searchBar contentMode="redraw" text="" placeholder="App name, artist, song, album, e-book" translatesAutoresizingMaskIntoConstraints="NO" id="7B3-64-6Od">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="7B3-64-6Od" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="6Em-C5-8Tj"/>
+                            <constraint firstItem="0hn-qd-elK" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Hsa-K2-lEe"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="0hn-qd-elK" secondAttribute="bottom" id="IOd-z2-LBy"/>
+                            <constraint firstAttribute="trailing" secondItem="7B3-64-6Od" secondAttribute="trailing" id="O3h-ZZ-lmj"/>
+                            <constraint firstItem="7B3-64-6Od" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="mhx-Mi-3NB"/>
+                            <constraint firstItem="0hn-qd-elK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="ocJ-pd-Fcg"/>
+                            <constraint firstAttribute="trailing" secondItem="0hn-qd-elK" secondAttribute="trailing" id="ury-FR-yL1"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="searchBar" destination="7B3-64-6Od" id="bZ3-i7-to5"/>
+                        <outlet property="tableView" destination="0hn-qd-elK" id="arj-57-c2l"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="24.375" y="32.74647887323944"/>
         </scene>
     </scenes>
 </document>
