--- a/StoreSearchTutorial4/StoreSearchTutorial4/Base.lproj/Main.storyboard
+++ b/StoreSearchTutorial4/StoreSearchTutorial4/Base.lproj/Main.storyboard
@@ -156,7 +156,7 @@
                                         <rect key="frame" x="168" y="212" width="68" height="24"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                                        <state key="normal" title="$9.99"/>
+                                        <state key="normal" title="$9.99" backgroundImage="PriceButton"/>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="0.95193965517241375" colorSpace="calibratedWhite"/>
@@ -189,5 +189,6 @@
     </scenes>
     <resources>
         <image name="CloseButton" width="15" height="15"/>
+        <image name="PriceButton" width="11" height="24"/>
     </resources>
 </document>
