IBAction openInStore otwiera iTune AppStore lub Safari w celu przejścia na StoreURL

--- a/StoreSearchTutorial4/StoreSearchTutorial4/Base.lproj/Main.storyboard
+++ b/StoreSearchTutorial4/StoreSearchTutorial4/Base.lproj/Main.storyboard
@@ -160,6 +160,9 @@
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                         <inset key="contentEdgeInsets" minX="5" minY="0.0" maxX="5" maxY="0.0"/>
                                         <state key="normal" title="$9.99" backgroundImage="PriceButton"/>
+                                        <connections>
+                                            <action selector="openInStore" destination="PUn-mm-KqJ" eventType="touchUpInside" id="LZI-bc-39A"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="0.95193965517241375" colorSpace="calibratedWhite"/>
