--- a/StoreSearchTutorial4/StoreSearchTutorial4/Base.lproj/Main.storyboard
+++ b/StoreSearchTutorial4/StoreSearchTutorial4/Base.lproj/Main.storyboard
@@ -116,6 +116,7 @@
                     <connections>
                         <outlet property="pageControl" destination="k2a-hn-SoG" id="t2e-Ea-bNB"/>
                         <outlet property="scrollView" destination="GJd-jy-FkW" id="3OO-Bi-GM7"/>
+                        <segue destination="PUn-mm-KqJ" kind="presentation" identifier="ShowDetail" id="8B8-mx-5Gl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xHl-OJ-fXb" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -253,4 +254,7 @@
         <image name="CloseButton" width="15" height="15"/>
         <image name="PriceButton" width="11" height="24"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="8B8-mx-5Gl"/>
+    </inferredMetricsTieBreakers>
 </document>
